--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "2.30.0",
     "lucide-react": "^0.525.0",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
